erreurs en html

--- a/erreurs/401.html
+++ b/erreurs/401.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0045)http://205.236.12.52/projet/h2017/equipe5/500 -->
+<!-- saved from url=(0045)http://205.236.12.52/projet/h2017/equipe5/401 -->
 <html lang="fr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         
@@ -7,22 +7,22 @@
 <meta name="keywords" content="Boîte, à, Bouf, bouffe, traiteur, plats, cuisine, maison">
 <meta name="author" content="Jose Ouellet et Guillaume Prudhomme">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-<title>Erreur 500 - Boîte à Bouf</title>
+<title>Erreur 401 - Boîte à Bouf</title>
 
-    <link rel="stylesheet" type="text/css" href="/projet/h2017/equipe5/css/materialize.css">
-    <script type="text/javascript" src="/projet/h2017/equipe5/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="/projet/h2017/equipe5/js/materialize.js"></script>
+<link rel="stylesheet" type="text/css" href="/projet/h2017/equipe5/css/materialize.css">
+        <script type="text/javascript" src="/projet/h2017/equipe5/js/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="/projet/h2017/equipe5/js/materialize.js"></script>
     </head>
     <body>
         <main><div class="progress grey lighten-2 hide" id="mainProgressBar" style="margin:0;position:fixed;top:0;">
     <div class="indeterminate orange"></div>
 </div>
 
-    <nav class="brown lighten-1" style="background-image:url(&#39;css/res/wood.jpg&#39;);background-size:auto 62px;border-bottom:2px solid #4e342e;text-shadow: #444 0px -2px;">
+    <nav class="brown lighten-1" style="background-image:url('css/res/wood.jpg');background-size:auto 62px;border-bottom:2px solid #4e342e;text-shadow: #444 0px -2px;">
         <div class="nav-wrapper container" style="background:none;background-color: transparent;">
             <ul class="left">
                             <li><a href="http://205.236.12.52/projet/h2017/equipe5/home" class="left"><i class="material-icons">arrow_back</i></a></li>
-                            <li><a class="brand-logo center">Erreur 500</a></li>
+                            <li><a class="brand-logo center">Erreur 401</a></li>
                         </ul>
             <ul class="right">
 
@@ -33,8 +33,8 @@
 
     <div class="container">
     <div class="section">
-        <h5>Désolé, quelque chose s'est brisée.</h5>
-        <div style="width:100%;height:400px; width: auto;background-repeat:no-repeat;background-image:url('css/res/500.png');background-size:500px auto;background-position:center;"></div>
+        <h5>Désolé, vous n'avez pas les droits d'accès à cette page.</h5>
+        <div style="width:100%;height:300px; width: auto;background-repeat:no-repeat;background-image:url('css/res/401.png');background-size:500px auto;background-position:center;"></div>
     </div>
 </div>
 <script type="text/javascript">
