--- a/erreurs/404.html
+++ b/erreurs/404.html
@@ -34,7 +34,7 @@
     <div class="container">
     <div class="section">
         <h5>Désolé, nous n'avons pu trouver cette page.</h5>
-        <div style="width:100%;height:300px; width: auto;background-repeat:no-repeat;background-image:url(&#39;css/res/404.png&#39;);background-size:500px auto;background-position:center;"></div>
+        <div style="width:100%;height:300px; width: auto;background-repeat:no-repeat;background-image:url('css/res/404.png');background-size:500px auto;background-position:center;"></div>
     </div>
 </div>
 <script type="text/javascript">
